[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/buttonStyles/normal.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/buttonStyles/disabled.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/buttonStyles/pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/buttonStyles/hover.tres" type="StyleBox" id=5]
[ext_resource path="res://src/HomeScreen/HomeControl.gd" type="Script" id=6]
[ext_resource path="res://assets/buttonStyles/buttonText.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/testStyles.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="HomeControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
margin_bottom = 6.10352e-05
rect_min_size = Vector2( 720, 720 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 720 )
custom_constants/separation = 72
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 720.0
margin_bottom = 128.0
rect_min_size = Vector2( 720, 64 )
custom_fonts/font = SubResource( 1 )
text = "CharacterCam"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 720.0
margin_bottom = 656.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
custom_constants/separation = 51

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 200.0
margin_right = 520.0
margin_bottom = 64.0
rect_min_size = Vector2( 320, 64 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "Floating Cam"

[node name="settings" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 200.0
margin_top = 115.0
margin_right = 520.0
margin_bottom = 179.0
rect_min_size = Vector2( 320, 64 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "Settings"

[node name="extraInfo" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 167.0
margin_top = 230.0
margin_right = 553.0
margin_bottom = 286.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "Extra Info To help"

[node name="LinkButton" type="LinkButton" parent="VBoxContainer/VBoxContainer"]
margin_left = 213.0
margin_top = 337.0
margin_right = 507.0
margin_bottom = 373.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
text = "Check updates"
underline = 1

[node name="Label" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
margin_top = 424.0
margin_right = 360.0
margin_bottom = 456.0
rect_min_size = Vector2( 360, 32 )
size_flags_horizontal = 0
custom_fonts/normal_font = ExtResource( 8 )
text = "            Current Version is 0.1.0"
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/extraInfo" to="." method="_on_extraInfo_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
